--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -18,5 +18,6 @@
  </ul>
 <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
 <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+<img src="galaxy.jpg" alt="a photo of the galaxy">
 </body>
 </html>
