change name of favorite-things.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>My favorite things</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <li>
       <a href="http://www.example.com/brother.html">
         My brother <strong>Brother</strong>
-        <img src="img/brother.jpeg" alt="A photo of my Brother.">
+        <img src="img/brother.jpg" alt="A photo of my Brother.">
       </a>
     </li>
     <li>
@@ -22,13 +23,13 @@
         <li>
           <a href="http://www.example.com/dad.html">
             <strong>Dad</strong>
-            <img src="img/dad.jpeg" alt="A photo of Dad.">
+            <img src="img/dad.jpg" alt="A photo of Dad.">
           </a>
         </li>
         <li>
           <a href="http://www.example.com/mom.html">
             <strong>Mom</strong>
-            <img src="img/mom.jpeg" alt="A photo of Mom.">
+            <img src="img/mom.jpg" alt="A photo of Mom.">
           </a>
         </li>
       </ul>
@@ -36,13 +37,13 @@
     <li>
       <a href="http://www.example.com/friend.html">
         My friend <strong>Friend</strong>
-        <img src="img/friend.jpeg" alt="A photo of Friend.">
+        <img src="img/friend.jpg" alt="A photo of Friend.">
       </a>
     </li>
     <li>
       <a href="http://www.example.com/dog.html">
         My dog <strong>Dog/strong>
-        <img src="img/dog.jpeg" alt="A photo of Dog.">
+        <img src="img/dog.jpg" alt="A photo of Dog.">
       </a>
     </li>
   </ul>
